# mix-sof_client

./: .gitignore  readme.txt
include/: FILE_LOG.h  SKFError.h  certificate_items_parse.h  common.h  mix-mutex.h  mix_server.h  o_all_func_def.h  o_all_type_def.h  openssl_func_def.h  skf.h  skff.h  skft.h  sm2.h  sm2_boringssl.h  smb_cs.h  smb_cs_inner.h  smb_dev.h  smb_qtui.h  smcert.h  sof_client-tools.h  sof_client.h  sof_clientf.h  sof_clientt.h  sof_clientu.h  swsds.h
include/openssl/: aead.h  cipher.h  digest.h  evp.h  obj_mac.h  ssl.h  tls1.h
include/xmlsec_inc/libxml/: xmlversion.h
include/xmlsec_inc/xmlsec/: Makefile  Makefile.in  app.h  private.h  strings.h  transforms.h  xmldsig.h  xmlsec.h
include/xmlsec_inc/xmlsec/gcrypt/: Makefile  Makefile.in
include/xmlsec_inc/xmlsec/gnutls/: Makefile  Makefile.in
include/xmlsec_inc/xmlsec/mscrypto/: Makefile.in
include/xmlsec_inc/xmlsec/nss/: Makefile  Makefile.in
include/xmlsec_inc/xmlsec/openssl/: Makefile  Makefile.in  crypto.h
include/xmlsec_inc/xmlsec/private/: Makefile  Makefile.in
lib/: libcrypto.lib  libssl.lib  libxml2.lib  libxmlsec-openssl.lib  libxmlsec.lib  mix_bssl.lib  mix_bssl_shared.lib  sof_client.lib
src/: CMakeLists.txt
src/libxmlsec/: CMakeLists.txt  app.c  dl.c  strings.c  transforms.c  xmldsig.c  xmlsec.c
src/libxmlsec/openssl/: CMakeLists.txt  crypto.c  digests.c  evp.c  evp_signatures.c
src/sof_client/: CMakeLists.txt  FBWTSofPluginAPI.cpp  FBWTSofPluginAPI.h  HTTPServer.cpp  certificate_items_parse.cpp  error.c  header.c  mix_server.cpp  o_all_func_def.c  openssl_func_def.c  request.c  resource.h  response.c  server.h  server_.cpp  skf.h  skfn.h  skfp.h  skft.h  skfu.h  smb_cs.cpp  smcert.cpp  sof_client-lib.cpp  sof_client-tools.cpp  sof_client-tools.h  sof_client.def  sof_client.h  sof_client.rc  sof_clientf.h  sof_clientn.h  sof_clientp.h  sof_clientt.h  sof_server.cpp  x_test.cpp  x_test_encrypt.cpp
src/x_test/: CMakeLists.txt  x_test.cpp
web/YDXToken_Sample/: YDXTokenTokenPlugin_Test.html
web/YDXToken_Sample/content/: MIXCoreDemo.html  YDXTokenOperateCer.html  YDXTokentop.html
web/YDXToken_Sample/content/js/: MIXCore.js  MIXCoreUpperAPI.js  YDXToken.js  YDXTokenBasicOper.js
